frontend/test/should_fail/uniqueEdgeByIndex.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	-e:Edge{unique[42]}->;
	
	modify {
	}
}
